src/test/ui/macros/incorrrect-repetition-2.stderr
error: `$a:expr` is followed (through repetition) by itself, which is not allowed for `expr` fragments
  --> $DIR/incorrrect-repetition-2.rs:4:8
   |
LL |     ($($a:expr)*) => {};
   |        ^^^^^^^ this fragment is followed by itself without a valid separator
   |
note: lint level defined here
  --> $DIR/incorrrect-repetition-2.rs:1:9
   |
LL | #![deny(incorrect_macro_fragment_repetition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56575 <https://github.com/rust-lang/rust/issues/56575>
   = note: allowed there are: `;`, `=>` or `,`
help: add a valid separator for the repetition to be unambiguous, for example
   |
LL |     ($($a:expr);*) => {};
   |                ^

error: aborting due to previous error

